--- a/src/components/FAQ/skills.css
+++ b/src/components/FAQ/skills.css
@@ -1,9 +1,8 @@
 .skills__content {
     background-color: var(--container-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem 4rem;
     border-radius: 1.25rem;
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 .skills__title {
