--- a/src/App.css
+++ b/src/App.css
@@ -213,3 +213,19 @@ img {
     margin-right: var(--mb-1);
   }
 }
+
+.fade-in-out {
+  animation: fade-in-out 15s ease-in-out infinite;
+}
+
+@keyframes fade-in-out {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
